# embedding-based-story-ranking

./: README.md  main.py  pyproject.toml
